--- a/frontend/src/components/calendar/calendar.css
+++ b/frontend/src/components/calendar/calendar.css
@@ -19,7 +19,8 @@
 }
 
 .rbc-today {
-  background-color: transparent;
+  background-color: transparent !important; /* or match disabled cell bg */
+  color: inherit !important;
 }
 
 .rbc-current-time-indicator {
@@ -69,4 +70,8 @@
 
 .edit-calendar .rbc-row .rbc-date-cell {
   height: 100%;
+}
+
+.rbc-off-range-bg {
+  @apply !bg-gray-300;
 }
